--- a/pages/Militares_carreira.html
+++ b/pages/Militares_carreira.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Força Aérea Brasileira</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/carreira.css">
 </head>
 <body>
@@ -22,40 +23,42 @@
     <!-- Menu lateral -->
     <aside class="sidebar">
         <ul>
-            <li >
+            <li>
                 <a href="EDA.html">
-                <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
+                <i class="fas fa-plane"></i>
                 Esquadrilha da Fumaça - EDA
                 </a>
             </li>
             <li>
                 <a href="fabtv.html">
-                    <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                    <i class="fas fa-tv"></i>
                     FAB TV
                 </a>
             </li>
             <li>
                 <a href="Radio.html">
-                    <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
+                    <i class="fas fa-broadcast-tower"></i>
                     Rádio Força Aérea FM
                 </a>
             </li>
-            <li class="">
-                    <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
+            <li>
+                <a href="Força_aerea.html">
+                    <i class="fas fa-book"></i>
                     Publicações da FAB
+                </a>
             </li>
             <li>
-                <a href="/index.html">
-                    <img src="../static/img/icon-aplicativo.png" alt="Publicações da FAB">
+                <a href="../index.html">
+                    <i class="fas fa-home"></i>
                     Home
                 </a>
             </li>
-        </ul>
-        </ul>
+        </ul>        
     </aside>
 
     <!-- Conteúdo principal -->
     <main class="main-content">
+        <h3>MILITARES DE CARREIRA</h3>
         <section class="search-panel">
             <h3>Status</h3>
             <input type="text" placeholder="Digite o status">
@@ -67,7 +70,7 @@
         </section>
 
         <section class="contact-table">
-            <h3>Contatos Regionais</h3>
+            <h3>CONTATOS REGIONAIS</h3>
             <table>
                 <thead>
                     <tr>
@@ -79,7 +82,46 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="4">Nenhum dado disponível</td>
+                        <td>SERENS 1</td>
+                        <td>Belém/PA</td>
+                        <td>(91) 3204-9659</td>
+                        <td>serens.serepbe@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 2</td>
+                        <td>Recife/PE</td>
+                        <td>(81) 3461-7661</td>
+                        <td>serens.sereprf@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 3</td>
+                        <td>Rio de Janeiro/RJ</td>
+                        <td>(21) 2157-2739</td>
+                        <td>serens.sereprj@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 4</td>
+                        <td>São Paulo/SP</td>
+                        <td>(11) 2223-9321</td>
+                        <td>serens.serepsp@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 5</td>
+                        <td>Canoas/RS</td>
+                        <td>(51) 3462-1204</td>
+                        <td>serens.serepco@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 6</td>
+                        <td>Brasília/DF</td>
+                        <td>(61) 3364-8205</td>
+                        <td>serens.serepbr@fab.mil.br</td>
+                    </tr>
+                    <tr>
+                        <td>SERENS 7</td>
+                        <td>Manaus/AM</td>
+                        <td>(92) 2129-1775</td>
+                        <td>serens.serepmn@fab.mil.br</td>
                     </tr>
                 </tbody>
             </table>
