--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Cabeçalho -->
-    <header style="background-color: #2E6DB5;" class="text-white py-3">
+    <header style="background-color: #0056A6;" class="text-white py-3">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand text-white" href="#">
