--- a/pages/EDA.html
+++ b/pages/EDA.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/style_esquadrilha.css">
 </head>
 <body>
@@ -27,34 +28,34 @@
     <aside class="sidebar">
         <ul>
             <li class="active">
-                <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
+                <i class="fas fa-plane"></i>
                 Esquadrilha da Fumaça - EDA
             </li>
             <li>
                 <a href="fabtv.html">
-                    <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                    <i class="fas fa-tv"></i>
                     FAB TV
                 </a>
             </li>
             <li>
                 <a href="Radio.html">
-                    <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
+                    <i class="fas fa-broadcast-tower"></i>
                     Rádio Força Aérea FM
                 </a>
             </li>
             <li>
                 <a href="Força_aerea.html">
-                    <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
+                    <i class="fas fa-book"></i>
                     Publicações da FAB
                 </a>
             </li>
             <li>
                 <a href="../index.html">
-                    <img src="../static/img/icon-aplicativo.png" alt="Publicações da FAB">
+                    <i class="fas fa-home"></i>
                     Home
                 </a>
             </li>
-        </ul>
+        </ul>        
     </aside>    
 
     <!-- Conteúdo principal -->
