--- a/pages/Força_aerea.html
+++ b/pages/Força_aerea.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Força Aérea Brasileira</title>
     <link rel="stylesheet" href="../static/css/forca.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -22,35 +23,35 @@
     <!-- Menu lateral -->
     <aside class="sidebar">
         <ul>
-            <li >
+            <li>
                 <a href="EDA.html">
-                <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
+                <i class="fas fa-plane"></i>
                 Esquadrilha da Fumaça - EDA
                 </a>
             </li>
             <li>
                 <a href="fabtv.html">
-                    <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                    <i class="fas fa-tv"></i>
                     FAB TV
                 </a>
             </li>
             <li>
                 <a href="Radio.html">
-                    <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
+                    <i class="fas fa-broadcast-tower"></i>
                     Rádio Força Aérea FM
                 </a>
             </li>
             <li class="active">
-                    <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
+                    <i class="fas fa-book"></i>
                     Publicações da FAB
             </li>
             <li>
-                <a href="/index.html">
-                    <img src="../static/img/icon-aplicativo.png" alt="Publicações da FAB">
+                <a href="../index.html">
+                    <i class="fas fa-home"></i>
                     Home
                 </a>
             </li>
-        </ul>
+        </ul>        
     </aside>
 
     <!-- Conteúdo principal -->
